--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">3D AR Gear</string>
+    <string name="animate">Animate</string>
+    <string name="enter_animation_glb_url">Animation Glb URL</string>
+    <string name="enter_avatar_glb_url">Avatar Glb URL</string>
+    <string name="avatar_default_value">https://models.readyplayer.me/64242ab4c9e8aa39b5d1b4dc.glb</string>
+    <string name="bottom_drawer_image">Bottom Drawer Image</string>
+    <string name="avatar_default_url">https://models.readyplayer.me/64242ab4c9e8aa39b5d1b4dc.glb</string>
 </resources>
